--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ repositories{
 }
 
 def allureVersion = "2.17.2",
-    selenideVersion = "6.3.3",
+    selenideVersion = "6.2.1",
     restAssured = "4.4.0" ,
     junitVersion = "5.8.2" ,
-    assertjVersion = "3.22.0" ,
+    assertjVersion = "3.22.0",
+    ownerVersion = "1.0.12",
     slf4jVersion = "1.7.32"
 
 allure {
@@ -36,7 +37,8 @@ dependencies {
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.assertj:assertj-core:$assertjVersion",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.aeonbits.owner:owner:$ownerVersion"
     )
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:$slf4jVersion",
