--- a/src/test/resources/config/remote_example.properties
+++ b/src/test/resources/config/remote_example.properties
@@ -3,4 +3,6 @@ browserVersion=100.0
 browserSize=1920x1080
 user=
 password=
+userEmail=
+userPassword=
 videoStorage=https://selenoid.autotests.cloud/video/
