--- a/src/test/resources/config/remote_example.properties
+++ b/src/test/resources/config/remote_example.properties
@@ -1,8 +1,7 @@
 browser=chrome
 browserVersion=100.0
 browserSize=1920x1080
-user=
-password=
 userEmail=
 userPassword=
+remoteUrl=
 videoStorage=https://selenoid.autotests.cloud/video/
