--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,7 @@ tasks.withType(JavaCompile){
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
-    useJUnitPlatform{
-        includeTags System.getProperty("tag").toString()
-    }
+    useJUnitPlatform()
 
     if (System.getProperty("threads") != null) {
         systemProperties += [
@@ -79,3 +77,14 @@ tasks.withType(Test) {
     }
 }
 
+task ui_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags "ui"
+    }
+}
+
+task mobile_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags "mobile"
+    }
+}
